src/test/ui/generator/issue-88653.stderr
error[E0631]: type mismatch in generator arguments
  --> $DIR/issue-88653.rs:8:22
   |
LL | fn foo(bar: bool) -> impl Generator<(bool,)> {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^ expected due to this
...
LL |     |bar| {
   |     ----- found signature defined here
   |
   = note: expected generator signature `fn((bool,)) -> _`
              found generator signature `fn(bool) -> _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
